tests/stage2/t3_diagnostics/type_errors/return_type_mismatch.fuse
// EXPECTED ERROR:
// type mismatch

fn foo() -> Int {
  "hello"
}

@entrypoint
fn main() {
  println(foo())
}
